Fix espace bottom of last project item on mobile

--- a/src/pages/scss/projects.scss
+++ b/src/pages/scss/projects.scss
@@ -8,7 +8,7 @@
   width: 95%;
   display: grid;
   grid-template-columns: repeat(3, auto);
-  grid-template-rows: repeat(4, auto);
+  grid-template-rows: repeat(5, auto);
   grid-gap: 2.5rem;
 }
 
